# Agentic-RAG-News

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
backend/: Dockerfile  main.py
evals/: eda.ipynb
evals/datasets/: agentic_rag_60 questions.csv
frontend/: Dockerfile  next.config.mjs  tsconfig.tsbuildinfo
frontend/app/: page.tsx
frontend/app/components/: ABTestTab.tsx  AnalyticsTab.tsx  ArchitectureTab.tsx  ChatTab.tsx  HelpTab.tsx  Sidebar.tsx
frontend/app/lib/: api.ts  storage.ts  types.ts
scripts/: run_indexing.py  test_rag_pipeline.py  test_retrieval.py
src/agentic_rag/: configuration.py  memory.py  state.py
src/agentic_rag/agents/: planner.py  ranker.py  researcher.py  synthesizer.py  verifier.py
src/agentic_rag/generation/: __init__.py  answer_generator.py
src/agentic_rag/prompts/: prompts_template.py
src/agentic_rag/tools/: mediastack_tool.py  tavily_tool.py
src/rag_baseline/: configuration.py  custom_exceptions.py  domain_models.py
src/rag_baseline/embedding/: text_embedder.py
src/rag_baseline/generation/: answer_generator.py
src/rag_baseline/indexing/: vector_indexer.py
src/rag_baseline/ingestion/: mediastack_fetcher.py  text_chunker.py
src/rag_baseline/orchestration/: rag_pipeline.py
src/rag_baseline/retrieval/: hybrid_retriever.py  keyword_searcher.py  semantic_retriever.py
src/rag_baseline/utils/: retry_utils.py
src/storage/: postgres_repository.py  schema.sql
src/vector_store/: qdrant.py
